public/stylesheets/style.css
@font-face {
    font-family: 'owfont';
    src: url('/images/pages/big_noodle_titling_oblique.ttf');
    font-weight: normal;
    font-style: normal;
}

.card{
  font-family: 'owfont'
}


body{
  height: 100vh;
  width: 100vw;
  overflow-y: scroll;
}

.navbar{
  background-color: rgb(82, 80, 80);
  font-size: 1.2em;
}

.navbar-brand{
  min-height: 55px;
  padding: 0 15px 5px
}
.navbar-default .navbar-nav li a{
  color: #b69b03a1;
}
.navbar-default .navbar-nav li a:hover, .navbar-default .navbar-nav li a:active{
  color: #b69b03a1;
}

#home{
  background: url('/images/pages/background.jpg') no-repeat center center fixed;
  display: table;
  height: 100%;
  position: relative;
  width: 100%;
  background-size: cover;
  overflow-y: scroll;
}

.landing-text{
  display: table-cell;
  text-align: center;
  vertical-align: middle;
}

.landing-text h1{
  font-family:'owfont';
  font-size: 500%;
  font-weight: 700;
}

.padding{
  padding: 80px 0;
}

.padding img{
  width: 100%;
}

#fixed{
  background: url("/images/pages/OW_heroes.png") no-repeat center center fixed;
  display: table;
  height: 60%;
  position: relative;
  width: 100%;
  background-size: cover;
}

footer{
  width: 100%;
  background-color: rgb(31, 30, 30);
  color: #FFF;

}

.fa{
  padding: 15px;
  font-size: 25px;
  color: #ffda06;
}

.fa:hover{
  color: #D5D5D5;
  text-decoration: none;
}

.icon{
  max-width: 100px;
}
#lfg{
  background: url('/images/pages/volskaya-industries-4.jpg') no-repeat center center fixed;
  display: table;
  height: 100%;
  position: relative;
  width: 100%;
  background-size: cover;
}
#profile{
  background: url('/images/pages/anna.jpg') no-repeat center center fixed;
  display: table;
  height: 100%;
  position: relative;
  width: 100%;
  background-size: cover;
}

#sidePanel{
  overflow-y: scroll;
}

#threadList{
  text-align: center;
  padding: 30px 30px;
  height: 100vh;
  overflow-y: scroll;
}



.tableHead{
  color: white;
  background-color: rgba(34, 119, 231, 0.568);
}

.tableSec{
  color: black;
  background-color: rgba(202, 196, 196, 0.589);
}

#lfgForm li{
  gap: 40px;
}


#lfgForm{
  font-family: owfont;
  text-align: center;
  background-color: #50555ab7;
  padding: 40px 40px;
  border-radius: 10px;
  box-shadow:rgba(43, 42, 42, 0.39) 10px 10px 10px 10px,rgba(24, 23, 23, 0.397) -10px -10px 10px 10px;
  color: #f99e1a;
}
#heroSlots{
  display: flex;
  flex-wrap: wrap;
  row-gap: 40px;
}
.box{
  font-family:owfont;
  background-color: #43484c;
  padding: 20px;
  text-align: center;
  justify-content: center;
  justify-self: center;
  margin-top: 10px;
  margin-bottom: 10px;


}

#title-input{
  min-width:  400px;
}

#editProfile{
  font-size: 20px;
  background-color:	#43484c;
  padding-bottom: 40px;
  padding-top: 40px;
  border-radius: 20px;
  color: white;
}

#owfont{
  font-family: "owfont";
  font-size: 50px;
  color: #f99e1a;
}

#profile-input{
  background-color:#50555a8f;
}

#followers{
  background-color: #50555a8f;
}
#followers ::hover{
  background: transparent;
}

/* width */
::-webkit-scrollbar {
  width: 10px;
}

#reply{
  display: flex;
  flex-wrap: wrap;
  background-color: #50555a8f;
  padding-bottom: 10px;
}

#replybody{
  background-color: #f99e1a;
  margin-left: 10px;
  margin-right: 10px;
  margin-top: 10px;
}

#reply button{
  justify-content: center;
  margin-top: 5px;
  background-color: red;
  border-radius: 10px;
  color: rgb(21, 149, 235);
}

#statTracker{
  background-color: rgba(14, 165, 252, 0.568);
  font-family: 'owfont';
}

#statBox{
  background-color:rgba(76, 186, 250, 0.568);
  border: rgb(76, 186, 250) 2px solid;
  height: 100px;
  width: 75%;
  justify-content: center;
  text-align: center;
  color: white;
}

#statBox p{
  font-size: 40px;
}



#followerBox{
  margin-left: 75px;
  width:200px;
  background-color:rgb(43, 46, 48);
}

